devops-pro/05 kubernetes/23 cert-manager/ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simplesingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`chiarellidev.com`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  tls:
    secretName: chiarellidev-cert-secret
