devops-pro/05 kubernetes/23 cert-manager/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simplesingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`chiarellidev.com`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
